--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManResolucion/_Shared/_renderInicioPau.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManResolucion/_Shared/_renderInicioPau.cshtml
@@ -227,7 +227,7 @@
         <div class="col-md-12"><br /><br /></div>
         <div class="form-group col-md-6">
             <label for="txtNumExp" class="text-small">N° Expediente asignado</label>
-            @Html.EditorFor(m => m.txtNumeroExpediente, new { htmlAttributes = new { @class = "form-control form-control-sm", placeholder = "Expediente Administrativo", disabled = "disabled" } })
+            @Html.EditorFor(m => m.txtNumeroExpediente, new { htmlAttributes = new { @class = "form-control form-control-sm", placeholder = "Expediente Administrativo" } })
         </div>
         <div class="form-group col-md-2">
             <br />
