--- a/SIGOFCv3/Areas/General/Views/ManPersonas/AddEdit.cshtml
+++ b/SIGOFCv3/Areas/General/Views/ManPersonas/AddEdit.cshtml
@@ -25,9 +25,9 @@
 @section scripts{
     <script>
         "use strict";
-        var rol = '', tipo = '';
+        var rol = '';//, tipo = '';
 
-        tipo = '@ViewBag.tipo';
+        //tipo = '@ViewBag.tipo';
 
         $(document).ready(function () {
             //Validamos el rol del usuario
@@ -129,8 +129,15 @@
                                     </div>
                                 </div>
                                 <div class="form-row">
-                                    <div class="form-group col-md-12">
-                                        <label for="lblItemPN_DITipoId" class="text-small">Tipo Cargo</label>
+                                    <div class="form-group col-md-6">
+                                        <label for="lblItemPN_DITipoId" class="text-small" style="padding-top:10px;">Tipo Cargo</label>
+                                    </div>
+                                    <div class="form-group col-md-6">
+                                        <button type="button" class="btn btn-primary btn-sm" style="float: right;margin-right:12px;" onclick="ManPersonas_AddEdit.fnAddTipoCargo()">Agregar cargo</button>
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="form-group col-md-12" id="divTipoCargo">
                                         @Html.DropDownListFor(m => m.ddlITipoCargoId, new SelectList(Model.ddlITipoCargo, "Value", "Text"), new { @class = "form-control form-control-sm", @multiple = "multiple" })
                                         @Html.HiddenFor(m => m.hdfITipoCargo)
                                     </div>
@@ -163,6 +170,53 @@
                                         @Html.DropDownListFor(m => m.ddlIEspecialidadId, new SelectList(Model.ddlIEspecialidad, "Value", "Text"), new { @class = "form-control form-control-sm" })
                                     </div>
                                 </div>
+                                <div id="dvRegente">
+                                    <div class="form-row">
+                                        <div class="form-group col-md-1">
+                                            <label for="lblAnio" class="text-small">Año</label>
+                                            @Html.DropDownListFor(m => m.ddlAnioId, new SelectList(Model.ddlAnio, "Value", "Text"), new { @class = "form-control form-control-sm" })
+                                        </div>
+                                        <div class="form-group col-md-3">
+                                            <label for="lblNroLicencia" class="text-small">Nro. Licencia</label>
+                                            @Html.EditorFor(m => m.txtNroLicencia, new { htmlAttributes = new { @class = "form-control form-control-sm" } })
+                                        </div>
+                                        <div class="form-group col-md-2">
+                                            <label for="lblFecLicencia" class="text-small">Fecha de Otorgamiento</label>
+                                            @Html.EditorFor(m => m.txtFecLicencia, new { htmlAttributes = new { @class = "form-control form-control-sm", placeholder = "dd/mm/yyyy", title = "la fecha a ingresar debe ser en el formato dd/mm/yyyy", maxlength = "10" } })
+                                        </div>
+                                    </div>
+                                    <div class="form-row">
+                                        <div class="form-group col-md-4">
+                                            <label for="lblResolucion" class="text-small">Nro. Resolución Directoral</label>
+                                            @Html.EditorFor(m => m.txtResolucion, new { htmlAttributes = new { @class = "form-control form-control-sm" } })
+                                        </div>
+                                        <div class="form-group col-md-3">
+                                            <label for="lblCategoriaId" class="text-small">Categoría</label>
+                                            @Html.DropDownListFor(m => m.ddlCategoriaId, new SelectList(Model.ddlCategoria, "Value", "Text"), new { @class = "form-control form-control-sm" })
+                                        </div>
+                                        <div class="form-group col-md-5" id="dvIMencionRegencia" style="display:none;">
+                                            <label for="lblMencionRegenciaId" class="text-small">Menciones de la Regencia</label>
+                                            @Html.DropDownListFor(m => m.ddlMencionRegenciaId, new SelectList(Model.ddlMencionRegencia, "Value", "Text"), new { @class = "form-control form-control-sm", @multiple = "multiple" })
+                                            @Html.HiddenFor(m => m.hdfMencionRegencia)
+                                        </div>
+                                    </div>
+                                    <div class="form-row">
+                                        <div class="form-group col-md-2">
+                                            <label for="lblCIP" class="text-small">Nro. CIP</label>
+                                            @Html.EditorFor(m => m.txtCIP, new { htmlAttributes = new { @class = "form-control form-control-sm" } })
+                                        </div>
+                                        <div class="form-group col-md-2">
+                                            <label for="lblEstado" class="text-small">Estado</label>
+                                            @Html.DropDownListFor(m => m.ddlEstadoId, new SelectList(Model.ddlEstado, "Value", "Text"), new { @class = "form-control form-control-sm" })
+                                        </div>
+                                    </div>
+                                </div>
+                                <div id="dvOtro" class="form-row">
+                                    <div class="form-group col-md-4">
+                                        <label for="lblOtro" class="text-small">Otros: Descripción</label>
+                                        @Html.EditorFor(m => m.txtOtro, new { htmlAttributes = new { @class = "form-control form-control-sm" } })
+                                    </div>
+                                </div>
                                 <div class="form-row" style="margin-bottom:10px;">
                                     <div class="col-md-12">
                                         @Html.Partial("~/Areas/General/Views/ManPersonas/Shared/_renderListDomicilio.cshtml", Model)
@@ -186,4 +240,5 @@
         </div>
     </div>
 </div>
+<div class="modal fade hide" id="mdlAddTipoCargo" role="dialog"></div>
 
