--- a/SIGOFCv3/Areas/General/Views/ManPersonas/Shared/_renderListTelefono.cshtml
+++ b/SIGOFCv3/Areas/General/Views/ManPersonas/Shared/_renderListTelefono.cshtml
@@ -100,12 +100,12 @@
 
         if (_renderListTelefono.opc == 'NUE') {
             data.RegEstado = 1;
-            data.COD_SECUENCIAL = 0; 
+            data.COD_SECUENCIAL = 0;
             _renderListTelefono.dtRenderListTelefono.rows.add([data]).draw();
             _renderListTelefono.dtRenderListTelefono.page('last').draw('page');
         }
         else {
-            data.COD_SECUENCIAL = _renderListTelefono.codsecuencial; 
+            data.COD_SECUENCIAL = _renderListTelefono.codsecuencial;
             _renderListTelefono.dataTelefono.data(data).draw(false);
         }
 
@@ -170,13 +170,13 @@
                         <div class="form-group row" style="margin-bottom:0px;">
                             <label for="lblMItemTelefono_Numero" class="col-md-3 col-form-label text-small">Número:</label>
                             <div class="col-md-9">
-                                @Html.TextBox("txtMItemTelefono_Numero", "", new { @class = "form-control form-control-sm" })
+                                @Html.TextBox("txtMItemTelefono_Numero", "", new { @class = "form-control form-control-sm", pattern = "[0-9]{1,6}", title = "Solo debe ingresar números enteros", onkeypress = "return utilSigo.onKeyEntero(event, this);" })
                             </div>
                         </div>
                         <div class="form-group row" style="margin-bottom:0px;">
                             <label for="lblMItemTelefono_Anexo" class="col-md-3 col-form-label text-small">Anexo:</label>
                             <div class="col-md-9">
-                                @Html.TextBox("txtMItemTelefono_Anexo", "", new { @class = "form-control form-control-sm" })
+                                @Html.TextBox("txtMItemTelefono_Anexo", "", new { @class = "form-control form-control-sm", pattern = "[0-9]{1,6}", title = "Solo debe ingresar números enteros", onkeypress = "return utilSigo.onKeyEntero(event, this);" })
                             </div>
                         </div>
                     </div>
