--- a/SIGOFCv3/Areas/THabilitante/Views/ManVentanillaAntecedentesExpedientes/_Transferir.cshtml
+++ b/SIGOFCv3/Areas/THabilitante/Views/ManVentanillaAntecedentesExpedientes/_Transferir.cshtml
@@ -1,7 +1,10 @@
 ﻿@model CapaEntidad.ViewModel.DOC.VM_Transferir
 
-<script src="~/Areas/THabilitante/js/ManVentanillaAntecedentesExpedientes/_Transferir.js?v3.16"></script>
+<script src="~/Areas/THabilitante/js/ManVentanillaAntecedentesExpedientes/_Transferir.js?v3.39"></script>
+<script>
 
+
+</script>
 <div id="divItemESituAnual" class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
         <div class="modal-header text-small" style="cursor:move;padding:0.5rem;">
@@ -147,6 +150,21 @@
                         {
                             <div id="pnlItemPlanManejoTransferir" style="text-align:right">
                                 <button type="button" id="btnTransferirPOA" onclick="_transf.TPM()" class="btn btn-primary btn-sm">Transferir Plan de Manejo</button>
+                            </div>
+                        }
+                        @if (ViewBag.Obs == "CENSO")
+                        {
+                            <br />
+                            <div style="text-align:right">
+                                <button type="button" id="btnTransferirCenso" onclick="_transf.VERPOA()" class="btn btn-primary btn-sm">
+                                    Transferir CENSO
+                                </button>
+                            </div>
+                            <br />
+                            <div style="text-align:right">
+                                <button type="button" id="btnTransferirCenso" onclick="anteExpedientes.fnDownloadDocCenso(this)" class="btn btn-primary btn-sm">
+                                    Descarga CENSO Pre-procesado <i class="fa fa-lg fa-download" title="Descargar Documento"></i>
+                                </button>
                             </div>
                         }
                         <br />
